cmake_minimum_required(VERSION 3.15)

project (  concurrent-cpp20-all )

set ( PRJ_COMPILE_FEATURES )

list ( APPEND PRJ_COMPILE_FEATURES cxx_std_20 )

add_subdirectory(demo1)
add_subdirectory(demo2)
add_subdirectory(demo3)
add_subdirectory(demo4)
add_subdirectory(demo5)
add_subdirectory(demo6)
add_subdirectory(demo7)
add_subdirectory(demo8)
add_subdirectory(demo9)
add_subdirectory(demo10)
add_subdirectory(demo11)
add_subdirectory(demo12)
add_subdirectory(demo13)
add_subdirectory(demo14)